fix overflow on mobile and changed color

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -11,12 +11,12 @@ body.nav--active {
 
 main {
   padding: 3rem 1.5rem 1rem;
-
   @media screen and (min-width: $medium) {
     padding-left: calc(1.5rem + #{$navWidth});
   }
 
   @media screen and (max-width: $medium - 1) {
     padding-top: calc(3rem + #{$burgerContainerHeight});
+  overflow-x: hidden;
   }
 }
